--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,222 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.buttons-wrap {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+}
+
+.primary-button {
+  color: #FFFFFF;
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: Roboto;
+  border: none;
+  text-align: center;
+  box-sizing: border-box;
+  background-color: #FF6D3E;
+  border-radius: 20px;
+  /* width: 100%;
+  max-width: 200px; */
+  height: 42px;
+  padding: 4px 12px;
+  box-sizing: border-box;
+  cursor: pointer;
+  /* margin-top: 10px; */
+}
+
+.primary-button:hover {
+  opacity: 0.8;
+}
+
+.secondary-button {
+  background: #2B2A29;
+  width: 120px;
+  height: 45px;
+  border-radius: 30px;
+  border: none;
+  font-size: 1rem;
+  color: #FFFFFF;
+  font-family: Quicksand;
+  font-weight: 400;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.secondary-button:hover {
+  opacity: 0.7;
+}
+
+
+.cancel-button {
+  box-sizing: border-box;
+  background: transparent;
+  border: none;
+  border-radius: 20px;
+  /* width: 100%; */
+  height: 42px;
+  cursor: pointer;
+  color: #1F2122;
+  font-family: Quicksand;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 4px 12px;
+  box-sizing: border-box;
+  border: 1px solid #AAADB1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+
+
+.disabled-button:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.label {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #101010;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0;
+  width: 100%;
+}
+
+.input {
+  /* background-color: transparent; */
+  width: 100%;
+  height: 40px;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  border: 1px solid #494949;
+  border-radius: 8px;
+  margin-left: 5px;
+  padding: 0 12px;
+  box-sizing: border-box;
+  color: #101010;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0;
+  background-color: #FFFFFF;
+}
+
+.textarea {
+  /* background-color: transparent; */
+  width: 100%;
+  height: 80px;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  border: 1px solid #494949;
+  border-radius: 8px;
+  margin-left: 5px;
+  padding: 8px 12px;
+  box-sizing: border-box;
+  color: #101010;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0;
+  background-color: #FFFFFF;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  /* color: #101010; */
+  font-family: 'Inter';
+  /* font-style: normal; */
+  margin: 0;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 16px;
+  background-color: #F6F6F6;
+  padding: 16px;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+}
+
+.input-fields-wrap {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+}
+
+.link {
+  text-decoration: none;
+  font-family: 'Nunito';
+}
+
+/* Prevent browser default password reveal icon */
+input[type="password"]::-ms-reveal,
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-textfield-decoration-container {
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: -9999px;
+}
+
+/* video::-internal-media-controls {
+  display: none !important;
+} */
+
+
+@media screen and (max-width:468px) {
+  .input-fields-wrap {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
