create review functionality, and created some pages

--- a/src/app/components/contact/contact.css
+++ b/src/app/components/contact/contact.css
@@ -1,7 +1,7 @@
 .contact {
     display: flex;
     justify-content: center;
-    background-color: #F6F6F6;
+    background: rgba(15, 16, 20, 1);
     padding-top: 30px;
 }
 
@@ -10,7 +10,7 @@
     justify-content: space-around;
     align-items: center;
     min-height: 10vh;
-    background-color: #ECF7FF;
+    background-color: #15161B;
     width: 100%;
     max-width: 1024px;
     border-radius: 16px 16px 0 0;
@@ -40,8 +40,8 @@
 }
 
 .contact-form h1 {
-    color: #00054B;
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 2.5rem;
     font-weight: 700;
@@ -51,8 +51,8 @@
 }
 
 .contact-form label {
-    color: rgba(0, 2, 75, 0.5);
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 1rem;
     font-weight: 600;
@@ -64,15 +64,15 @@
 
 .contact-form label input {
     background-color: transparent;
-    color: rgba(0, 2, 75, 0.5);
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 1rem;
     font-weight: 600;
     text-align: start;
     margin: 0;
     border: none;
-    border-bottom: 2px solid #00024B;
+    border-bottom: 2px solid #FFFFFF;
     outline: none;
 
 }
@@ -82,13 +82,13 @@
     height: 45px;
     border: none;
     border-radius: 20px;
-    background-color: #4496D2;
-    color: #FFF;
+    background-color: #FF6D3E;
     cursor: pointer;
     text-align: center;
     font-size: 1rem;
     font-weight: 500;
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
 }
 
@@ -105,8 +105,8 @@
 }
 
 .contact-info h6 {
-    color: #4496D2;
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 1rem;
     font-weight: 600;
@@ -115,8 +115,8 @@
 }
 
 .contact-info span {
-    color: #101010;
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 1rem;
     font-weight: 600;
@@ -132,8 +132,8 @@
 }
 
 .contact-icon span {
-    color: #101010;
-    font-family: 'Nunito';
+    color: #FFFFFF;
+    font-family: 'Inter';
     font-style: normal;
     font-size: 2rem;
     font-weight: 600;
@@ -143,7 +143,7 @@
 
 .contact-link {
     text-decoration: none;
-    color: #101010;
+    color: #FFFFFF;
 }
 
 @media screen and (max-width:768px) {
@@ -153,7 +153,7 @@
         justify-content: space-around;
         align-items: center;
         min-height: 10vh;
-        background-color: #ECF7FF;
+        background-color: #15161B;
         width: 100%;
         max-width: 1024px;
         border-radius: 16px 16px 0 0;
