--- a/src/app/components/banner/banner.css
+++ b/src/app/components/banner/banner.css
@@ -3,17 +3,30 @@
     height: 100%;
     min-height: 50vh;
     /* max-height: 90vh; */
-    background: #ECF7FF;
+    background: #0F1014;
     /* padding: 16px;
     box-sizing: border-box; */
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner picture{
+    width: 100%;
+    height: 100%;
+    min-height: 50vh;
+    background: #0F1014;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner img {
-    width: 100%;
+    /* width: 100%; */
+    height: 100%;
+    max-height: 90vh;
+
     /* max-width: 1080px; */
-    height: auto;
     /* max-height: 100vh; */
     /* object-fit: cover; */
     /* margin: 1vh 0; */
